# goods-scrapper

./: .env  .python-version  README.md  pyproject.toml  todos.md
src/: config.py  data_types.py  db_handlers.py  excel_handlers.py  main_funcs.py  parsers.py  tui.py  web_utils.py
src/assets/: .~lock.result_sheet.xlsx#  goods_scrapper.db  result_sheet.xlsx  test_product_links.xlsx
tests/: test_goods_scrapper.py
